// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input demo -- input 1`] = `
.c12 {
  vertical-align: baseline;
}

.c25 {
  display: table;
  width: 100%;
}

.c24 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c24 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.c24 input,
.c24 input:hover,
.c24 input:focus {
  border: none;
  outline: none;
  background: none;
}

.c24:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.c24 input {
  line-height: 26px;
  height: 26px;
}

.c24 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c24 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c24 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c24 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c11 {
  margin-right: 8px;
  font-size: 14px;
}

.c9 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c9 .c10 {
  color: #c3cad9;
}

.c9:hover {
  color: #0a1633;
}

.c9:hover .c10 {
  color: #3357df;
}

.c13 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  color: #0a1633;
}

.c13 .c10 {
  color: #c3cad9;
}

.c13 .c10 {
  color: #3860f4;
}

.c7 {
  position: relative;
  margin-bottom: -8px;
}

.c7 .c8,
.c7 .sc-bZQynM {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c7 .c8:last-child,
.c7 .sc-bZQynM:last-child {
  margin-right: 0;
}

.c7 .c27 {
  margin-right: 12px;
  margin-bottom: 8px;
}

.c7 .c27:last-child {
  margin-right: 0;
}

.c7 .c28+.c28 {
  margin-left: -1px;
}

.c7 .c26 {
  margin-right: -1px;
  margin-bottom: 8px;
}

.c7 .c26:first-child {
  border-radius: 2px 0 0 2px;
}

.c7 .c26:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c2 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c2:before,
.c2:after {
  content: ' ';
  display: table;
}

.c2:after {
  clear: both;
}

.c2 .c4 {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 {
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.c0 .c1 {
  margin-bottom: 16px;
}

.c0 .c1:last-child {
  margin-bottom: 0;
}

.c16 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c18 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c21 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c23 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c14 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c14:hover {
  border-color: #3357df;
}

.c14:hover .c20 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c14 .c20 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.c14 .c22 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.c14 .c15 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.c14 .c17,
.c14 .c19 {
  line-height: 16px;
}

.c14 .c17 {
  padding-right: 20px;
}

.c14 .c19 {
  padding-left: 20px;
}

.c14 .c17 {
  display: none;
}

<div>
  <form
    class="demo-form uc-fe-form c0"
  >
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        size
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <i
              class="uc-fe-icon icon__cbox c10 c11 c12"
            />
            sm
          </div>
          <div
            checked=""
            class="c8 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="uc-fe-icon icon__cbox-ed c10 c11 c12"
            />
            md
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <i
              class="uc-fe-icon icon__cbox c10 c11 c12"
            />
            lg
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        prefix
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c14"
        >
          <div
            class="c15 c16"
          >
            <span
              class="c17 c18"
            >
              ON
            </span>
            <span
              class="c19 c18"
            >
              OFF
            </span>
            <span
              class="c20 c21"
            >
              <span
                class="c22 c23"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        suffix
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c14"
        >
          <div
            class="c15 c16"
          >
            <span
              class="c17 c18"
            >
              ON
            </span>
            <span
              class="c19 c18"
            >
              OFF
            </span>
            <span
              class="c20 c21"
            >
              <span
                class="c22 c23"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        disabled
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c14"
        >
          <div
            class="c15 c16"
          >
            <span
              class="c17 c18"
            >
              ON
            </span>
            <span
              class="c19 c18"
            >
              OFF
            </span>
            <span
              class="c20 c21"
            >
              <span
                class="c22 c23"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c24"
    >
      <span
        class="c25"
      >
        <input />
      </span>
    </span>
  </div>
</div>
`;

exports[`Input demo -- input-disabled 1`] = `
.c7 {
  vertical-align: baseline;
}

.c4 {
  vertical-align: middle;
  display: table-cell;
  width: 1px;
}

.c3 {
  padding-left: 8px;
}

.c6 {
  padding-right: 8px;
}

.c1 {
  display: table;
  width: 100%;
}

.c0 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c0 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.c0 input,
.c0 input:hover,
.c0 input:focus {
  border: none;
  outline: none;
  background: none;
}

.c0:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.c0 input {
  line-height: 26px;
  height: 26px;
}

.c0 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c0 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c0 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c0 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c8 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
  box-shadow: none;
}

.c8,
.c8 input,
.c8 .style__SearchIcon-sc-11j0fsv-1 {
  cursor: not-allowed;
}

.c8 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.c8 input,
.c8 input:hover,
.c8 input:focus {
  border: none;
  outline: none;
  background: none;
}

.c8:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.c8 input {
  line-height: 26px;
  height: 26px;
}

.c8 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c8 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c8 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c8 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c8,
.c8:hover {
  color: #cccccc;
  -webkit-text-fill-color: currentcolor;
  border-color: #cccccc;
  background: #f7f7f7;
}

.c8 .c5,
.c8 .c2 {
  color: inherit;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c0"
    >
      <span
        class="c1"
      >
        <span
          class="c2 c3 c4"
        >
          search
        </span>
        <input
          value="default value"
        />
        <span
          class="c5 c6 c4"
        >
          <i
            class="uc-fe-icon icon__search c7"
          />
        </span>
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c8"
      disabled=""
    >
      <span
        class="c1"
      >
        <span
          class="c2 c3 c4"
        >
          search
        </span>
        <input
          disabled=""
          value="default value"
        />
        <span
          class="c5 c6 c4"
        >
          <i
            class="uc-fe-icon icon__search c7"
          />
        </span>
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c8"
      disabled=""
    >
      <span
        class="c1"
      >
        <span
          class="c2 c3 c4"
        >
          <i
            class="uc-fe-icon icon__search c7"
          />
        </span>
        <input
          disabled=""
          value="default value"
        />
        <span
          class="c5 c6 c4"
        >
          search
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`Input demo -- input-icon 1`] = `
.c5 {
  vertical-align: baseline;
}

.c4 {
  vertical-align: middle;
  display: table-cell;
  width: 1px;
}

.c3 {
  padding-right: 8px;
}

.c1 {
  display: table;
  width: 100%;
}

.c0 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c0 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.c0 input,
.c0 input:hover,
.c0 input:focus {
  border: none;
  outline: none;
  background: none;
}

.c0:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.c0 input {
  line-height: 26px;
  height: 26px;
}

.c0 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c0 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c0 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c0 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c6 .c2,
.c6 .sc-bdVaJa {
  color: inherit;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c0"
    >
      <span
        class="c1"
      >
        <input />
        <span
          class="c2 c3 c4"
        >
          <i
            class="uc-fe-icon icon__circle-fill c5"
          />
        </span>
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c0"
    >
      <span
        class="c1"
      >
        <input />
        <span
          class="c2 c3 c4"
        >
          <i
            class="uc-fe-icon icon__circle c5"
          />
        </span>
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c0"
    >
      <span
        class="c1"
      >
        <input />
        <span
          class="c2 c3 c4"
        >
          <i
            class="uc-fe-icon icon__loading c5"
          />
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`Input demo -- input-prefix 1`] = `
.c5 {
  vertical-align: baseline;
}

.c4 {
  vertical-align: middle;
  display: table-cell;
  width: 1px;
}

.c3 {
  padding-left: 8px;
}

.c1 {
  display: table;
  width: 100%;
}

.c0 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c0 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.c0 input,
.c0 input:hover,
.c0 input:focus {
  border: none;
  outline: none;
  background: none;
}

.c0:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.c0 input {
  line-height: 26px;
  height: 26px;
}

.c0 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c0 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c0 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c0 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c6 .c7,
.c6 .c2 {
  color: inherit;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c0"
    >
      <span
        class="c1"
      >
        <span
          class="c2 c3 c4"
        >
          prefix
        </span>
        <input />
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c0"
    >
      <span
        class="c1"
      >
        <span
          class="c2 c3 c4"
        >
          <i
            class="uc-fe-icon icon__search c5"
          />
        </span>
        <input />
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c0"
      style="width:300px;"
    >
      <span
        class="c1"
      >
        <span
          class="c2 c3 c4"
        >
          prefix
        </span>
        <input />
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c0"
      style="width:300px;"
    >
      <span
        class="c1"
      >
        <span
          class="c2 c3 c4"
        >
          <div
            style="width:50px;"
          >
            prefix
          </div>
        </span>
        <input />
      </span>
    </span>
  </div>
</div>
`;

exports[`Input demo -- input-size 1`] = `
.c1 {
  display: table;
  width: 100%;
}

.c2 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c2 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.c2 input,
.c2 input:hover,
.c2 input:focus {
  border: none;
  outline: none;
  background: none;
}

.c2:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.c2 input {
  line-height: 26px;
  height: 26px;
}

.c2 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c2 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c2 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c2 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c0 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 24px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c0 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.c0 input,
.c0 input:hover,
.c0 input:focus {
  border: none;
  outline: none;
  background: none;
}

.c0:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.c0 input {
  line-height: 22px;
  height: 22px;
}

.c0 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c0 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c0 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c0 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c3 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 32px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c3 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.c3 input,
.c3 input:hover,
.c3 input:focus {
  border: none;
  outline: none;
  background: none;
}

.c3:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.c3 input {
  line-height: 30px;
  height: 30px;
}

.c3 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c3 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c3 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c3 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c0"
    >
      <span
        class="c1"
      >
        <input />
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c2"
    >
      <span
        class="c1"
      >
        <input />
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c3"
    >
      <span
        class="c1"
      >
        <input />
      </span>
    </span>
  </div>
</div>
`;

exports[`Input demo -- input-status 1`] = `
.c1 {
  display: table;
  width: 100%;
}

.c0 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c0 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.c0 input,
.c0 input:hover,
.c0 input:focus {
  border: none;
  outline: none;
  background: none;
}

.c0:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.c0 input {
  line-height: 26px;
  height: 26px;
}

.c0 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c0 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c0 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c0 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c2 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c2 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.c2 input,
.c2 input:hover,
.c2 input:focus {
  border: none;
  outline: none;
  background: none;
}

.c2:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.c2 input {
  line-height: 26px;
  height: 26px;
}

.c2 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c2 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c2 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c2 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c2.c2.c2 {
  border-color: #f44336;
  background: #fff0f0;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c0"
    >
      <span
        class="c1"
      >
        <input />
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c2"
    >
      <span
        class="c1"
      >
        <input />
      </span>
    </span>
  </div>
</div>
`;

exports[`Input demo -- input-suffix 1`] = `
.c5 {
  vertical-align: baseline;
}

.c4 {
  vertical-align: middle;
  display: table-cell;
  width: 1px;
}

.c3 {
  padding-right: 8px;
}

.c1 {
  display: table;
  width: 100%;
}

.c0 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c0 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.c0 input,
.c0 input:hover,
.c0 input:focus {
  border: none;
  outline: none;
  background: none;
}

.c0:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.c0 input {
  line-height: 26px;
  height: 26px;
}

.c0 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c0 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c0 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c0 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c6 .c2,
.c6 .sc-bdVaJa {
  color: inherit;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c0"
    >
      <span
        class="c1"
      >
        <input />
        <span
          class="c2 c3 c4"
        >
          suffix
        </span>
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c0"
    >
      <span
        class="c1"
      >
        <input />
        <span
          class="c2 c3 c4"
        >
          <i
            class="uc-fe-icon icon__search c5"
          />
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`Input demo -- search 1`] = `
.c12 {
  vertical-align: baseline;
}

.c28 {
  vertical-align: middle;
  display: table-cell;
  width: 1px;
}

.c27 {
  padding-right: 8px;
}

.c30 {
  cursor: pointer;
}

.c25 {
  display: table;
  width: 100%;
}

.c24 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c24 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.c24 input,
.c24 input:hover,
.c24 input:focus {
  border: none;
  outline: none;
  background: none;
}

.c24:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.c24 input {
  line-height: 26px;
  height: 26px;
}

.c24 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c24 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c24 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c24 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c31,
.c31 input,
.c31 .c29 {
  cursor: not-allowed;
}

.c31 .c26,
.c31 .sc-bdVaJa {
  color: inherit;
}

.c11 {
  margin-right: 8px;
  font-size: 14px;
}

.c9 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c9 .c10 {
  color: #c3cad9;
}

.c9:hover {
  color: #0a1633;
}

.c9:hover .c10 {
  color: #3357df;
}

.c13 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  color: #0a1633;
}

.c13 .c10 {
  color: #c3cad9;
}

.c13 .c10 {
  color: #3860f4;
}

.c7 {
  position: relative;
  margin-bottom: -8px;
}

.c7 .c8,
.c7 .sc-bZQynM {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c7 .c8:last-child,
.c7 .sc-bZQynM:last-child {
  margin-right: 0;
}

.c7 .c33 {
  margin-right: 12px;
  margin-bottom: 8px;
}

.c7 .c33:last-child {
  margin-right: 0;
}

.c7 .c34+.c34 {
  margin-left: -1px;
}

.c7 .c32 {
  margin-right: -1px;
  margin-bottom: 8px;
}

.c7 .c32:first-child {
  border-radius: 2px 0 0 2px;
}

.c7 .c32:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c2 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c2:before,
.c2:after {
  content: ' ';
  display: table;
}

.c2:after {
  clear: both;
}

.c2 .c4 {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 {
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.c0 .c1 {
  margin-bottom: 16px;
}

.c0 .c1:last-child {
  margin-bottom: 0;
}

.c16 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c18 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c21 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c23 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c14 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c14:hover {
  border-color: #3357df;
}

.c14:hover .c20 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c14 .c20 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.c14 .c22 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.c14 .c15 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.c14 .c17,
.c14 .c19 {
  line-height: 16px;
}

.c14 .c17 {
  padding-right: 20px;
}

.c14 .c19 {
  padding-left: 20px;
}

.c14 .c17 {
  display: none;
}

<div>
  <form
    class="demo-form uc-fe-form c0"
  >
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        size
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <i
              class="uc-fe-icon icon__cbox c10 c11 c12"
            />
            sm
          </div>
          <div
            checked=""
            class="c8 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="uc-fe-icon icon__cbox-ed c10 c11 c12"
            />
            md
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <i
              class="uc-fe-icon icon__cbox c10 c11 c12"
            />
            lg
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        disabled
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c14"
        >
          <div
            class="c15 c16"
          >
            <span
              class="c17 c18"
            >
              ON
            </span>
            <span
              class="c19 c18"
            >
              OFF
            </span>
            <span
              class="c20 c21"
            >
              <span
                class="c22 c23"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c24"
    >
      <span
        class="c25"
      >
        <input />
        <span
          class="c26 c27 c28"
        >
          <i
            class="uc-fe-icon icon__search c29 c30 c12"
          />
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`Input demo -- search-disabled 1`] = `
.c7 {
  vertical-align: baseline;
}

.c4 {
  vertical-align: middle;
  display: table-cell;
  width: 1px;
}

.c3 {
  padding-right: 8px;
}

.c6 {
  cursor: pointer;
}

.c1 {
  display: table;
  width: 100%;
}

.c8 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c8 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.c8 input,
.c8 input:hover,
.c8 input:focus {
  border: none;
  outline: none;
  background: none;
}

.c8:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.c8 input {
  line-height: 26px;
  height: 26px;
}

.c8 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c8 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c8 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c8 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c0 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
  box-shadow: none;
}

.c0,
.c0 input,
.c0 .c5 {
  cursor: not-allowed;
}

.c0 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.c0 input,
.c0 input:hover,
.c0 input:focus {
  border: none;
  outline: none;
  background: none;
}

.c0:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.c0 input {
  line-height: 26px;
  height: 26px;
}

.c0 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c0 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c0 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c0 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c0,
.c0:hover {
  color: #cccccc;
  -webkit-text-fill-color: currentcolor;
  border-color: #cccccc;
  background: #f7f7f7;
}

.c0 .c2,
.c0 .sc-bdVaJa {
  color: inherit;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c0"
      disabled=""
    >
      <span
        class="c1"
      >
        <input
          disabled=""
        />
        <span
          class="c2 c3 c4"
        >
          <i
            class="uc-fe-icon icon__search c5 c6 c7"
          />
        </span>
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c8"
    >
      <span
        class="c1"
      >
        <input />
        <span
          class="c2 c3 c4"
        >
          <i
            class="uc-fe-icon icon__search c5 c6 c7"
          />
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`Input demo -- search-size 1`] = `
.c7 {
  vertical-align: baseline;
}

.c4 {
  vertical-align: middle;
  display: table-cell;
  width: 1px;
}

.c3 {
  padding-right: 8px;
}

.c6 {
  cursor: pointer;
}

.c1 {
  display: table;
  width: 100%;
}

.c8 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c8 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.c8 input,
.c8 input:hover,
.c8 input:focus {
  border: none;
  outline: none;
  background: none;
}

.c8:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.c8 input {
  line-height: 26px;
  height: 26px;
}

.c8 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c8 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c8 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c8 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c10,
.c10 input,
.c10 .c5 {
  cursor: not-allowed;
}

.c10 .c2,
.c10 .sc-bdVaJa {
  color: inherit;
}

.c0 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 24px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c0 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.c0 input,
.c0 input:hover,
.c0 input:focus {
  border: none;
  outline: none;
  background: none;
}

.c0:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.c0 input {
  line-height: 22px;
  height: 22px;
}

.c0 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c0 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c0 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c0 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c9 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 32px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c9 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.c9 input,
.c9 input:hover,
.c9 input:focus {
  border: none;
  outline: none;
  background: none;
}

.c9:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.c9 input {
  line-height: 30px;
  height: 30px;
}

.c9 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c9 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c9 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c9 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c0"
    >
      <span
        class="c1"
      >
        <input />
        <span
          class="c2 c3 c4"
        >
          <i
            class="uc-fe-icon icon__search c5 c6 c7"
          />
        </span>
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c8"
    >
      <span
        class="c1"
      >
        <input />
        <span
          class="c2 c3 c4"
        >
          <i
            class="uc-fe-icon icon__search c5 c6 c7"
          />
        </span>
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c9"
    >
      <span
        class="c1"
      >
        <input />
        <span
          class="c2 c3 c4"
        >
          <i
            class="uc-fe-icon icon__search c5 c6 c7"
          />
        </span>
      </span>
    </span>
  </div>
</div>
`;
